docs: crud apis
