# docs/swagger.yaml
@@ -428,6 +428,30 @@ paths:
       tags:
       - posts
   /posts/:id:
+    delete:
+      description: fetch post
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.EditPostSuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.EditPostErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.EditPostErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.EditPostErrorResponse'
+      summary: fetch post
+      tags:
+      - posts
     put:
       consumes:
       - multipart/form-data
